manifests/base/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  rules:
    - host: keycloak.al.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-headless
                port:
                  number: 8080
  tls:
    - hosts:
        - keycloak.al.apoorva64.com
      secretName: keycloak-ingress-tls
